k8s/gateway/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: canister-gw
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy
  listeners:
    - name: https-canister
      protocol: HTTPS
      port: 443
      hostname: "*.canister.me"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: gw-canister-me-tls
    - name: https-tale-api
      protocol: HTTPS
      port: 443
      hostname: api.tale.me
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: gw-api-tale-me-tls
    - name: https-renai
      protocol: HTTPS
      port: 443
      hostname: "*.renai.me"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: gw-renai-me-tls
